syntax = "proto3";

package moviesgrpc;

option go_package = "grpc;moviesgrpc";

message Void {
}

message MovieKey {
  string id = 1;
}

message Movie {
	string Id      = 1;
	string Name    = 2;
	repeated string Genres  = 3;
	repeated string Similar = 4;
	repeated string Photos  = 5;
}

message Stats {
  int32 moviesCount = 1;
}

message Response {
  bool isOk = 1;
  Stats stats = 2;
  Movie movie = 3;
}

service MoviesStorage {
  rpc getStats(Void) returns (Stats);
  rpc getMovie(MovieKey) returns (Movie);
  rpc getMovieRandom(Void) returns (Movie);
  rpc updateMovie(Movie) returns (Void);
}
